--- a/api/src/Box9.Leds.Pi.Api.WebHost/packages.config
+++ b/api/src/Box9.Leds.Pi.Api.WebHost/packages.config
@@ -4,7 +4,7 @@
   <package id="Autofac.Owin" version="4.0.0" targetFramework="net461" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net461" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net461" />
-  <package id="Box9.Leds.Pi.Api" version="1.0.6302.36071" targetFramework="net461" />
+  <package id="Box9.Leds.Pi.Api" version="1.0.6355.21609" targetFramework="net461" />
   <package id="Dapper" version="1.50.2" targetFramework="net461" />
   <package id="Dapper.Contrib" version="1.50.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
@@ -30,7 +30,8 @@
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net461" />
+  <package id="Mono.Data.Sqlite.Portable" version="1.0.3.5" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="NJsonSchema" version="8.14.6289.34345" targetFramework="net461" />
   <package id="NSwag.Annotations" version="9.12.6284.27590" targetFramework="net461" />
   <package id="NSwag.AspNet.Owin" version="9.12.6284.27591" targetFramework="net461" />
@@ -44,4 +45,6 @@
   <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.104.0" targetFramework="net461" />
   <package id="System.Data.SQLite.Linq" version="1.0.104.0" targetFramework="net461" />
+  <package id="System.IO" version="4.1.0" targetFramework="net461" />
+  <package id="WebSocketSharp-NonPreRelease" version="1.0.0" targetFramework="net461" />
 </packages>
