--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "es6-promise": "^4.0.5",
     "es6-promise-polyfill": "^1.2.0",
     "file-loader": "^0.10.1",
+    "moment": "^2.18.1",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-redux": "^5.0.3",
