--- a/api/src/Box9.Leds.Manager.Services/packages.config
+++ b/api/src/Box9.Leds.Manager.Services/packages.config
@@ -36,9 +36,11 @@
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Mono.Data.Sqlite.Portable" version="1.0.3.5" targetFramework="net461" />
+  <package id="NAudio" version="1.8.0" targetFramework="net461" />
   <package id="ncrontab" version="3.3.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="NJsonSchema" version="8.14.6289.34345" targetFramework="net461" />
+  <package id="NReco.VideoConverter" version="1.1.2" targetFramework="net461" />
   <package id="NSwag.Annotations" version="9.12.6284.27590" targetFramework="net461" />
   <package id="NSwag.AspNet.Owin" version="9.12.6284.27591" targetFramework="net461" />
   <package id="NSwag.AspNet.WebApi" version="9.12.6284.27602" targetFramework="net461" />
