--- a/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
+++ b/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Scripts\0012_CreateBackgroundJobTable.cs" />
     <Compile Include="Scripts\0013_DropAndRecreateBackgroundJobTable.cs" />
     <Compile Include="Scripts\0014_ExtendAppPreferencesTable.cs" />
+    <Compile Include="Scripts\Discovery\0015_AddAudioFileReferenceColumn.cs" />
     <Compile Include="Scripts\Discovery\IScriptDiscovery.cs" />
     <Compile Include="Scripts\Discovery\ScriptDiscovery.cs" />
   </ItemGroup>
