--- a/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
+++ b/api/src/Box9.Leds.Manager.DataAccess/Box9.Leds.Manager.DataAccess.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Scripts\0014_ExtendAppPreferencesTable.cs" />
     <Compile Include="Scripts\0015_ExtendBackgroundJobsTable.cs" />
     <Compile Include="Scripts\0016_AddAudioFilePathColumnToVideoReference.cs" />
+    <Compile Include="Scripts\0017_AddIsBypassedToProjectDevice.cs" />
     <Compile Include="Scripts\Discovery\IScriptDiscovery.cs" />
     <Compile Include="Scripts\Discovery\ScriptDiscovery.cs" />
   </ItemGroup>
